# SDL_project

./: .gitignore  CMakeLists.txt  README.md  \  fsf  fsfs
.cache/clangd/index/: EventHandler.cpp.E19F30B2A3FE0642.idx  EventListener.cpp.710E9151BDE2F7B4.idx  EventListener.hpp.B6CEC5226D2E789D.idx  InputListener.cpp.F2CC208ADEED48B6.idx  InputListener.hpp.84D4D63BDB5F885C.idx  Render.cpp.91B45E6DBFCE7A94.idx  algorithms.hpp.44C1893E6940C1DD.idx  colors.hpp.9F8948EA01D80BC3.idx  entity.cpp.C9F43188984B18AD.idx  game.cpp.D60504674AC0269A.idx  game.hpp.C20497F72E31E1E8.idx  inputListener.cpp.A8C06D66BBDEC26F.idx  inputListener.hpp.3B087CDF6205E88B.idx  loggers.hpp.633D729A3A38921A.idx  macros.hpp.FBF3E5741CE6352E.idx  main.cpp.7381123CF3EA1B8B.idx  playerSettings.cpp.0696ADE3752729DD.idx  playerSettings.hpp.E48D8698DE7746AE.idx  renderer.cpp.677F82606515F105.idx  renderer.hpp.2533F08B3EAB7DFA.idx  square.cpp.F72A24AEE04A2E30.idx  square.hpp.3924AB463B01B869.idx  tetrominos.cpp.AF77161DDA7CECC3.idx  timer.cpp.CF3A2381BBAD586E.idx  timer.hpp.38EBC284601650F3.idx  types.hpp.EAAD646D8C30C4C4.idx  windowRenderer.cpp.2FAC80DDE6D54CA4.idx  windowRenderer.hpp.79067A58C0895343.idx
Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  sdl2_demo  tetris
Debug/.cmake/api/v1/reply/: codemodel-v2-0cd6f2c56973983c0e15.json  codemodel-v2-1a75b36b6f4c0a6498c0.json  codemodel-v2-320ec7c48ef8d76df259.json  codemodel-v2-5275a8ccfd82407d3da6.json  codemodel-v2-6a5f4c5ba31056b52c70.json  codemodel-v2-75049e64eb605f0c6f8e.json  codemodel-v2-bad0155566dd7fa4c2bf.json  codemodel-v2-ee6adc371ad7fe506cd1.json  index-2024-06-19T15-48-00-0641.json  (+15 more)
src/: Render.cpp  entity.hpp  game.cpp  game.hpp  inputListener.cpp  inputListener.hpp  main.cpp  playerSettings.cpp  playerSettings.hpp  renderer.cpp  renderer.hpp  square.cpp  square.hpp  tetrominos.hpp  timer.cpp  timer.hpp  windowRenderer.cpp  windowRenderer.hpp
src/util/: algorithms.hpp  colors.hpp  loggers.hpp  macros.hpp  types.hpp
